Problem statement Motivation Example use case

--- a/S2bibliography.bib
+++ b/S2bibliography.bib
@@ -71,3 +71,21 @@
   year={1998},
   publisher={Springer}
 }
+
+@article{dorigo1994robot,
+  title={Robot shaping: Developing autonomous agents through learning},
+  author={Dorigo, Marco and Colombetti, Marco},
+  journal={Artificial intelligence},
+  volume={71},
+  number={2},
+  pages={321--370},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@book{lozano2012autonomous,
+  title={Autonomous robot vehicles},
+  author={Lozano-Perez, Tom{\'a}s and Cox, Ingemar J and Wilfong, Gordon T},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
