--- a/S2template.tex
+++ b/S2template.tex
@@ -69,8 +69,14 @@
 \section{Introduction}
 
 \paragraph{}
-	The study of machine learning and planning can be broken down into several categories. Pattern database are admissible heuristics that are studied and tested on domain-independent search problems. Another criteria is the use of the local search space to optimize large scale search problems, while the use of different planning heuristics is tested and analyzed on different domains.\citeref{haslum2007domain} The primary algorithms of focus are the Real Time Adaptive A* and Learning Real time A*. Currently the industry has not fully utilized Machine Learning and AI for navigation applications. Industry is currently using Incremental search methods such as dynamic A* for unknown maps. This is used in DARPA’s Unmanned Ground Vehicle program, Mars Rover, and games such as Age of Empires 2. PRODIGY is an architecture used in planning and learning.\citeref{stone1994need} The current frontier of Academic research is currently focusing on many sections of machine learning and planning. A study is being done on finding a heuristic method which can best use machine learning to efficiently handle domain-independent search problems. Some research is done on reducing the complexity and the computation need of the algorithm. Another research method is focused on optimizing this algorithm through aiding parameters. Research is also being done to help the algorithm solve larger problems more successfully and expanding its optimal solutions from the local space into a larger space. Current problems with the application of machine learning in industry are the difficulty in extending this problem to multiple monotonous agents. Another problem is on the balance between exploration and exploitation where most algorithms have an excessive computation complexity for the optimal path when good is enough.    
-
+	The study of machine learning and planning can be broken down into several categories. Pattern database are admissible heuristics that are studied and tested on domain-independent search problems. Another criteria is the use of the local search space to optimize large scale search problems, while the use of different planning heuristics is tested and analyzed on different domains.\citeref{haslum2007domain} The primary algorithms of focus are the Real Time Adaptive A* and Learning Real time A*. Currently the industry has not fully utilized Machine Learning and AI for navigation applications. Industry is currently using Incremental search methods such as dynamic A* for unknown maps. This is used in DARPA’s Unmanned Ground Vehicle program, Mars Rover, and games such as Age of Empires 2. PRODIGY is an architecture used in planning and learning.\citeref{stone1994need} The current frontier of Academic research is currently focusing on many sections of machine learning and planning. A study is being done on finding a heuristic method which can best use machine learning to efficiently handle domain-independent search problems. Some research is done on reducing the complexity and the computation need of the algorithm. Another research method is focused on optimizing this algorithm through aiding parameters. Research is also being done to help the algorithm solve larger problems more successfully and expanding its optimal solutions from the local space into a larger space. Current problems with the application of machine learning in industry are the difficulty in extending this problem to multiple monotonous agents. Another problem is on the balance between exploration and exploitation where most algorithms have an excessive computation complexity for the optimal path when good is enough.
+%Problem Statement, Motivation, Use Case
+\paragraph{}
+Problem Statement: Planning in real time is a challenging task because of the dynamic nature of environment. A major problem faced by researchers is in finding an optimal strategy to decide when to expand the state space and when to stop and recalculate. Another problem faced by researchers is in expanding algorithms that work with local search to work for global search where the number of variables increases by a huge number.
+\paragraph{}
+Motivation: The search domains in real world scenarios are non-deterministic, complex and huge. This can be owed to the different types of agent’s viz., characters, objects and obstacles and their behaviors that can be present in a dynamic environment. Simulating such a domain virtually is a challenging task due to the large branching factor and high computational overhead that encompasses it. One of the principal ways in which we can reduce this overhead is by making use of previous experiences. This is where machine learning aids, since it automatically learns, optimizes and plans the agent’s next move based on previous moves. We need our algorithm to learn the properties of the search domain and plan accordingly by making use of efficient heuristic functions and cost functions.
+\paragraph{}
+Use Case: Consider a humanoid robot that can move through any unknown environment by avoiding all kinds of obstacles, much like C-3PO in Star Wars. Such a robot would become the state of the art in robotics and have enormous applications in all aspects of life. These robots could save lives in the sectors of health, industry, military, etc. The motion and trajectory planning of this robot would be the most fundamental, yet formidable challenges of autonomous robotic design. Since we would have high-dimensional state spaces, using a machine learning algorithm for its planning stage would be very resource friendly. The design of such an algorithm is very tricky since we would have to consider all variables in the robot’s physics but if it is achieved, we would have a robot that could change our lives forever.
 
 \bibliographystyleref{acmsiggraph}
 \nociteref{*}
