--- a/S2template.tex
+++ b/S2template.tex
@@ -21,7 +21,7 @@
 \title{S2: STAR Report Introduction, Taxonomy, and Body}
 
 \author{Students: %
- Sanjivi Muttena\emailfoot{sm1727@scarletmail.rutgers.edu}, %
+ Sanjivi Muttena\emailfoot{sanjivi.muttena@rutgers.edu}, %
  Nikhil Kumar\emailfoot{nikhilkumar516@gmail.com}, %
  Erin Corrado\emailfoot{e.corrado144@gmail.com}, %
  Daniel Bordak\emailfoot{dbordak@fastmail.fm},%
@@ -64,20 +64,57 @@
 %\end{CRcatlist}
 
 \keywordlist
-
+\setlength{\parskip}{0pt}
+\setlength{\parindent}{10pt}
 
 \section{Introduction}
 
 \paragraph{}
-	The study of machine learning and planning can be broken down into several categories. Pattern database are admissible heuristics that are studied and tested on domain-independent search problems. Another criteria is the use of the local search space to optimize large scale search problems, while the use of different planning heuristics is tested and analyzed on different domains.\citeref{haslum2007domain} The primary algorithms of focus are the Real Time Adaptive A* and Learning Real time A*. Currently the industry has not fully utilized Machine Learning and AI for navigation applications. Industry is currently using Incremental search methods such as dynamic A* for unknown maps. This is used in DARPA’s Unmanned Ground Vehicle program, Mars Rover, and games such as Age of Empires 2. PRODIGY is an architecture used in planning and learning.\citeref{stone1994need} The current frontier of Academic research is currently focusing on many sections of machine learning and planning. A study is being done on finding a heuristic method which can best use machine learning to efficiently handle domain-independent search problems. Some research is done on reducing the complexity and the computation need of the algorithm. Another research method is focused on optimizing this algorithm through aiding parameters. Research is also being done to help the algorithm solve larger problems more successfully and expanding its optimal solutions from the local space into a larger space. Current problems with the application of machine learning in industry are the difficulty in extending this problem to multiple monotonous agents. Another problem is on the balance between exploration and exploitation where most algorithms have an excessive computation complexity for the optimal path when good is enough.
+%Previous Work
 %Problem Statement, Motivation, Use Case
-\paragraph{}
-Problem Statement: Planning in real time is a challenging task because of the dynamic nature of environment. A major problem faced by researchers is in finding an optimal strategy to decide when to expand the state space and when to stop and recalculate. Another problem faced by researchers is in expanding algorithms that work with local search to work for global search where the number of variables increases by a huge number.
-\paragraph{}
-Motivation: The search domains in real world scenarios are non-deterministic, complex and huge. This can be owed to the different types of agent’s viz., characters, objects and obstacles and their behaviors that can be present in a dynamic environment. Simulating such a domain virtually is a challenging task due to the large branching factor and high computational overhead that encompasses it. One of the principal ways in which we can reduce this overhead is by making use of previous experiences. This is where machine learning aids, since it automatically learns, optimizes and plans the agent’s next move based on previous moves. We need our algorithm to learn the properties of the search domain and plan accordingly by making use of efficient heuristic functions and cost functions.
-\paragraph{}
-Use Case: Consider a humanoid robot that can move through any unknown environment by avoiding all kinds of obstacles, much like C-3PO in Star Wars. Such a robot would become the state of the art in robotics and have enormous applications in all aspects of life. These robots could save lives in the sectors of health, industry, military, etc. The motion and trajectory planning of this robot would be the most fundamental, yet formidable challenges of autonomous robotic design. Since we would have high-dimensional state spaces, using a machine learning algorithm for its planning stage would be very resource friendly. The design of such an algorithm is very tricky since we would have to consider all variables in the robot’s physics but if it is achieved, we would have a robot that could change our lives forever.
+%\paragraph{}
+Problem Statement: Planning in real time is a challenging task because of the dynamic nature of environment. A major problem faced by researchers is in finding an optimal strategy to decide when to expand the state space and when to stop and recalculate. Another problem faced by researchers is in expanding algorithms that work with local search to work for global search where the number of variables increases by a huge number. 
+\\
+\indent The search domains in real world scenarios are non-deterministic, complex and huge. This can be owed to the different types of agent’s viz., characters, objects and obstacles and their behaviors that can be present in a dynamic environment. Simulating such a domain virtually is a challenging task due to the large branching factor and high computational overhead that encompasses it. One of the principal ways in which we can reduce this overhead is by making use of previous experiences. This is where machine learning aids, since it automatically learns, optimizes and plans the agent’s next move based on previous moves. We need our algorithm to learn the properties of the search domain and plan accordingly by making use of efficient heuristic functions and cost functions.
+\\
+\indent Consider a humanoid robot that can move through any unknown environment by avoiding all kinds of obstacles, much like C-3PO in Star Wars. Such a robot would become the state of the art in robotics and have enormous applications in all aspects of life. These robots could save lives in the sectors of health, industry, military, etc. The motion and trajectory planning of this robot would be the most fundamental, yet formidable challenges of autonomous robotic design. Since we would have high-dimensional state spaces, using a machine learning algorithm for its planning stage would be very resource friendly. The design of such an algorithm is very tricky since we would have to consider all variables in the robot’s physics but if it is achieved, we would have a robot that could change our lives forever.
+\\
+\indent Machine learning in planning and scheduling can be applied anywhere an expensive, domain-specific problem exists, and an inexpensive solution is required; meaning, for businesses that want to make more money, and academics that need to solve problems with less money. This money is saved both by reducing required time and optimizing resource use (to the point it is cost-effective to do so).
 
+Commercial
+\begin{itemize}  
+\item Near-optimal schedules
+\item Factory worker scheduling
+\item CNC Machine Operation (Lathes, Mills)
+\item Production Lines
+\item Dispatching
+\item Job-shops
+\item Analytics
+\item Advertising
+\item Code repair
+\item Data mining
+\end{itemize}
+Academic
+\begin{itemize} 
+\item Human Learning
+\item Mathematical Programming
+\item Integer programming problems
+\item Empirical Analysis
+\item Induction
+\item Knowledge-based assistants
+\item Geo-coding
+\item Data search
+\end{itemize}
+
+\indent There are various methods for machine learning and planning because of its hefty and numerous requirements and features. Each method has its own purpose and varies depending on the problem to be solved. In order for machine learning and planning to take place, there needs to exist a search space, initial and end goal states, and solution. A method can be evaluated by the following criteria: planning time per move, likeliness of finding optimal path or near-optimal path, learning time, and memory usage. Ideally, we want to minimize planning time, learning time, and memory usage while obtaining as close to optimal solution as possible. With each of these criteria to keep track of come with challenges on how to adjust and create a more powerful and efficient algorithm for machine learning and planning.
+\\
+\indent The challenges of machine learning and planning is not that of how to get a solution, but how fast one can get a solution, how efficient the method is, and how optimal the solution is. There is an abundance of methods for machine learning and planning, each crafted to solve a different type of problem. Some methods such as the RTAA* follows trajectories of smaller cost for given time limits per search because it updates the heuristics quicker, which allows it to use larger local search spaces, which overcompensates for its less informed heuristics. While on the other hand, the min-max LRTA* is expected to run in a safely explorable state space, meaning the state spaces have to be relatively small or contain many evenly spread out goal states, but is inefficient if otherwise. Real-time search does not focus on the learning aspect but focuses on the time, thus outputting a sub-optimal solution, but nonetheless a fast solution. Pattern Databases and Macros can be used to improve performance by making it more efficient to find states. Hierarchical Task Networks can also be used to help organize planning algorithms for better efficiency. As one can observe, there are various trade-offs in efficiency, performance, and costs, depending on the algorithm's purpose.
+\\
+\indent As observed in the previous paragraph there are various methods that are optimal for one scenario but not for another. Since there are a plethora of problems and solutions under the umbrella of machine learning and planning, there is no one "Holy Grail", but a "Holy Grail" for each problem and solution. The "Holy Grails" to these challenges is observation. One must observe what is important in a solution: does the solution need to be outputted as fast as possible, or does the solution need to be optimal, etc.? Observation of initial and end goal states along with search space is also key. If the solution must be optimal and the search space is small, using the RTAA* would be appropriate since it will output an optimal solution, but the min-max LRTA* would be preferred over the RTAA* since the LRTA* is the more optimal in smaller search spaces. Other supporting features can be added to improve planning algorithms depending on the task at hand. For example, pattern databases help to determine heuristics more quickly; however, they require more memory. HTNs can also make planning more efficient, but they cannot be used well if the situation cannot be broken down into abstract hierarchical tasks. Macro actions have been shown to be extremely effective at planning and choosing states, but performance depends on well defined abstract tasks.
+\section{Prior Work}
+\indent The study of machine learning and planning can be broken down into several categories: Pattern Databases, local search space, Real Time Adaptive A*, and Learning Real Time A*. . Pattern database are admissible heuristics that are studied and tested on domain-independent search problems. Another criteria is the use of the local search space to optimize large scale search problems, while the use of different planning heuristics is tested and analyzed on different domains.\citeref{haslum2007domain} The primary algorithms of focus are the Real Time Adaptive A* and Learning Real time A*. Currently the industry has not fully utilized Machine Learning and AI for navigation applications. Industry is currently using Incremental search methods such as dynamic A* for unknown maps. This is used in DARPA’s Unmanned Ground Vehicle program, Mars Rover, and games such as Age of Empires 2. 
+\\
+\indent PRODIGY is an architecture used in planning and learning.\citeref{stone1994need} The current frontier of Academic research is currently focusing on many sections of machine learning and planning. A study is being done on finding a heuristic method which can best use machine learning to efficiently handle domain-independent search problems. Some research is done on reducing the complexity and the computation need of the algorithm. Another research method is focused on optimizing this algorithm through aiding parameters. Research is also being done to help the algorithm solve larger problems more successfully and expanding its optimal solutions from the local space into a larger space. Current problems with the application of machine learning in industry are the difficulty in extending this problem to multiple monotonous agents. Another problem is on the balance between exploration and exploitation where most algorithms have an excessive computation complexity for the optimal path when good is enough.
 \bibliographystyleref{acmsiggraph}
 \nociteref{*}
 \bibliographyref{S2bibliography.bib}
