fixed a line in HTN

--- a/S2template.tex
+++ b/S2template.tex
@@ -146,7 +146,7 @@ non primitive tasks into subtasks, a set of methods are utilized for
 decomposing a particular kind of task into a set of subtasks provided
 a set of preconditions are satisfied. For each task, there may be more
 than one applicable method, and thus more than one way to decompose
-the task into subtasks. An example would be the following: In a grid
+the task into subtasks. For example, in a grid
 world representation of a room that has to be cleaned by a vacuum
 cleaner agent, a hierarchical task network for the action of cleaning
 a room can be decomposed into a set of actions of suck, move right and
